hero image issue on mobile

--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -302,8 +302,7 @@
             width: 100%;
 
             @media screen and (max-width: 767px) {
-                width: 200%;
-                max-width: none !important;
+                max-width: 100% !important;
                 transform: translateX(0%);
                 min-height: 600px;
             }
